Atualização de estilo d12

--- a/desafios/d12/estilo/style.css
+++ b/desafios/d12/estilo/style.css
@@ -1,12 +1,22 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {
+    --font001: Verdana, Geneva, Tahoma, sans-serif;
+    --font002: 'Passion One', cursive;
+    --font003: 'Sriracha', cursive;
+}
 
 *{
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 html, body {
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--font001);
 }
 
 header {
@@ -17,6 +27,8 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font002);
+    font-size: 10vw;
 }
 header > p {
     padding-bottom: 50px;
@@ -35,6 +47,8 @@ section {
     padding-bottom: 10%;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--font003);
+    font-size: 3.2vw;
 
 }
 section.normal {
@@ -49,9 +63,9 @@ section.imagem {
 }
 
 section.imagem > p {
-    width: 400px;
+    display: inline-block;
     background-color: rgba(0, 0, 0, 0.397);
-    padding: 10px;
+    padding: 5px;
 
 }
 
