--- a/desafios/d12/estilo/style.css
+++ b/desafios/d12/estilo/style.css
@@ -51,6 +51,9 @@ section {
     font-size: 3.2vw;
 
 }
+section > p {
+    padding-bottom: 2em;
+}
 section.normal {
     background-color: white;
     color: black;
@@ -59,6 +62,22 @@ section.normal {
 section.imagem {
     background-color: rgb(82, 77, 77);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.445);
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+section#img01{
+    background-image: url(../imagens/background001.jpg);
+    background-position: right center;
+   
+
+}
+
+section#img02{
+    background-image: url(../imagens/background002.jpg);
+    
+    
 
 }
 
@@ -66,6 +85,7 @@ section.imagem > p {
     display: inline-block;
     background-color: rgba(0, 0, 0, 0.397);
     padding: 5px;
+    text-shadow: 1px 1px 0px black;
 
 }
 
