--- a/exercicios/ex026/mq004/estilos/mediaquery.css
+++ b/exercicios/ex026/mq004/estilos/mediaquery.css
@@ -2,8 +2,85 @@
 
 /* Todas as demais mídias */
 
-@media print {
+/* Typical Device Breakpoints
+Pequenas telas: até 600px
+celular: 600px até 812pxpx
+tablet: 769px até 1112pxpx
+desktop: 992 px até 1680pxpx
+Grandes telas: Acima de 1920px
+
+*/
+
+@media print { /*Impressoras*/
+    * {
+        font-family: 'Courier New', Courier, monospace;
+    }
     
+    body {
+        background-image: url(../imagens/back-print.jpg); /*Desnecessário*/
+    }
+
+    main {
+        width: 90vh;
+        border: 2px solid black;
+    }
+
+    main::after {
+        content: 'Essa impressão foi feita através do site www.cursoemvideo.com';
+        text-decoration: overline;
+
+    }
+
+    main h1 {
+        text-shadow: none;
+        color: black;
+    }
+
+    img {display: none;}
+    img#phone {display: none;}
+    img#tablet {display: none;}
+    img#print{display: block;} 
+    img#pc{display: none;}
+    img#tv{display: none;}
+
 }
 
+@media screen and (min-width: 769px) and (max-width: 1112px) { /*Tablets*/
+    body {
+        background: url(../imagens/back-tablet.jpg);
+    }
+    img {display: none;}
+    img#phone {display: none;}
+    img#tablet {display: block;}
+    img#print{display: none;} 
+    img#pc{display: none;}
+    img#tv{display: none;}
+}
 
+@media screen and (min-width: 992px) and (max-width: 1680px) { /*Desktops*/
+    body {
+        background-image: url(../imagens/back-pc.jpg);
+    }
+    img {display: none;}
+    img#phone {display: none;}
+    img#tablet {display: none;}
+    img#print{display: none;} 
+    img#pc{display: block;}
+    img#tv{display: none;}
+}
+
+@media screen and (min-width: 1920px) { /*Grandes telas*/
+    body {
+        background-image: url(../imagens/back-tv.jpg);
+    }
+    main {
+        width: 700px;
+    }
+
+    img {display: none;}
+    img#phone {display: none;}
+    img#tablet {display: none;}
+    img#print{display: none;} 
+    img#pc{display: none;}
+    img#tv{display: block;}
+}
